--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600;700&display=swap');
-@tailwind base;
+tailwind base;
 @tailwind components;
 @tailwind utilities;
 @layer base {
